🚀 Mobile VLA v1.0 완성: RoboVLMs 기반 Mobile Robot 특화 VLA 구현
✅ 핵심 기능:
- Kosmos-2B 기반 Vision-Language-Action 모델
- 3D 연속 액션 공간 [linear_x, linear_y, angular_z]
- Window/Chunk 메커니즘 (8프레임 → 2프레임 예측)
- 실제 로봇 HDF5 데이터 지원 (72 에피소드)
- 시나리오별 장애물 회피 성능 분석

🔧 기술적 구현:
- RoboVLMs 아키텍처 완전 호환
- Huber Loss 회귀 기반 연속 제어
- PIL 이미지 커스텀 collate function
- 5D→4D 텐서 변환 (Kosmos 특화)
- 종합 평가 시스템 (MAE, R², 임계값 정확도)

📊 성능 결과:
- 전체 MAE: 0.285
- linear_x: MAE 0.243, R² 0.354
- linear_y: MAE 0.550, R² 0.293
- angular_z: MAE 0.062, R² 0.000
- 임계값 정확도 37.5% (0.1 threshold)

🆕 추가 기능:
- 교수 관점 성능 분석 리포트
- RoboVLMs 상세 비교 분석
- 시퀀스 다이어그램 기반 아키텍처 비교
- HuggingFace 모델 업로드 준비

🗑️ 정리:
- Legacy 파일 및 디렉토리 완전 삭제
- 코드 구조 최적화
- 문서화 완료

--- a/Robo+/Mobile_VLA/pyproject.toml
+++ b/Robo+/Mobile_VLA/pyproject.toml
@@ -29,6 +29,7 @@ transformers = "4.41.2"
 numpy = "<2.0"
 h5py = "^3.8.0"
 pillow = "^9.5.0"
+pyarrow = ">=8.0.0,<15.0.0"  # datasets 2.12.0 호환
 # 📈 Training & Utilities (RoboVLMs 호환)
 tqdm = "^4.65.0"
 einops = "^0.8.0"
