--- a/Dockerfile.mobile-vla
+++ b/Dockerfile.mobile-vla
@@ -103,6 +103,47 @@ RUN python3 -m pip install --no-cache-dir \
     && rm -f /tmp/*.whl \
     && rm -rf /root/.cache/pip
 
+# 6. ROS2 Humble 설치
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        # ROS2 Humble 필수 패키지
+        software-properties-common \
+        curl \
+        gnupg \
+        lsb-release \
+    && curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ros-humble-desktop \
+        python3-colcon-common-extensions \
+        python3-rosdep \
+        python3-rosinstall-generator \
+        python3-wstool \
+        python3-rosinstall \
+        build-essential \
+        cmake \
+        git \
+        python3-pip \
+        python3-argcomplete \
+        python3-flake8 \
+        python3-flake8-docstrings \
+        python3-pytest-cov \
+        python3-setuptools \
+        python3-vcstool \
+        wget \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+# 7. ROS2 환경 설정
+RUN echo "source /opt/ros/humble/setup.bash" >> /root/.bashrc \
+    && rosdep init \
+    && rosdep update
+        /tmp/torchaudio-2.3.0+952ea74-cp310-cp310-linux_aarch64.whl \
+        /tmp/torchvision-0.18.0a0+6043bc2-cp310-cp310-linux_aarch64.whl \
+    && rm -f /tmp/*.whl \
+    && rm -rf /root/.cache/pip
+
 # 6. 필수 Python 패키지 설치 (실제 사용되는 것만)
 RUN python3 -m pip install --no-cache-dir \
         # VLA 모델용
