--- a/docker-compose.mobile-vla.yml
+++ b/docker-compose.mobile-vla.yml
@@ -1,232 +1,147 @@
-# =============================================================================
-# 🚀 Mobile VLA Docker Compose - 검증된 환경 기반
-# 기존 vla_app_final 환경에 Mobile VLA 기능 추가
-# =============================================================================
-
 version: '3.8'
 
 services:
-  # 🤖 메인 Mobile VLA 서비스 (검증된 환경 기반)
-  mobile-vla:
+  # =============================================================================
+  # 🚀 Mobile VLA 메인 컨테이너
+  # PyTorch 2.3.0 + VLA 추론 + ROS2 노드들
+  # =============================================================================
+  mobile_vla_main:
     build:
       context: .
       dockerfile: Dockerfile.mobile-vla
-    image: mobile_vla:verified-base
-    container_name: mobile_vla_verified
-    restart: unless-stopped
+    container_name: mobile_vla_main
+    image: mobile_vla:pytorch-2.3.0-cuda
     
-    # 🔧 GPU 및 하드웨어 접근 설정
+    # GPU 및 하드웨어 접근
     runtime: nvidia
-    privileged: true
-    
-    # 🌐 네트워크 설정 (ROS2 DDS 통신을 위해 host 네트워크 사용)
-    network_mode: host
-    
-    # 📡 환경 변수
     environment:
-      # 디스플레이 설정 (GUI 앱 지원)
-      - DISPLAY=${DISPLAY:-:0}
-      
-      # ROS2 설정
-      - ROS_DOMAIN_ID=42
-      - ROS_LOCALHOST_ONLY=0
-      - RMW_IMPLEMENTATION=rmw_cyclonedx_cpp
-      
-      # CUDA/GPU 설정
-      - CUDA_VISIBLE_DEVICES=0
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=all
-      - CUDAARCHS=87
-      - CUDA_ARCHITECTURES=87
-      
-      # PyTorch 최적화
-      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512
-      - TORCH_DTYPE=float16
-      
-      # Transformers/HuggingFace 캐시
-      - TRANSFORMERS_CACHE=/workspace/vla/.cache/huggingface
-      - HF_HOME=/workspace/vla/.cache/huggingface
-      
-      # Mobile VLA 설정
-      - MOBILE_VLA_DATA_DIR=/workspace/vla/mobile_vla_dataset
-      - MOBILE_VLA_LOG_LEVEL=INFO
-      
-      # 시스템 설정
-      - PYTHONUNBUFFERED=1
-      - DEBIAN_FRONTEND=noninteractive
-      
-      # Jetson 전용 설정 (기존 vla_app_final과 동일)
-      - TAR_INDEX_URL=http://jetson.webredirect.org:8000/jp6/cu122
-      - PIP_INDEX_URL=http://jetson.webredirect.org/jp6/cu122
-      - PIP_TRUSTED_HOST=jetson.webredirect.org
-      
-    # 📁 볼륨 마운트
+      - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
+      - XAUTHORITY=${XAUTHORITY}
+    
+    # 네트워크 설정
+    network_mode: host
+    
+    # 볼륨 마운트
     volumes:
-      # 🏠 호스트 vla 폴더 전체 마운트
-      - ./:/workspace/vla
-      
-      # 🎥 CSI 카메라 및 하드웨어 접근
-      - /dev:/dev
-      - /sys:/sys:ro
-      - /proc:/proc:ro
-      
-      # 🖥️ X11 GUI 지원
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - /etc/localtime:/etc/localtime:ro
-      
-      # 🔧 NVIDIA 런타임 라이브러리
+      # 호스트 CUDA 라이브러리 마운트
       - /usr/local/cuda:/usr/local/cuda:ro
       - /usr/lib/aarch64-linux-gnu:/usr/lib/aarch64-linux-gnu:ro
-      
-      # 💾 모델 캐시 (퍼시스턴트)
-      - mobile_vla_cache:/workspace/vla/.cache
-      
-      # 🗂️ 데이터셋 저장소
-      - mobile_vla_data:/workspace/vla/mobile_vla_dataset
-      
-      # 📊 로그 저장소
-      - mobile_vla_logs:/workspace/vla/logs
-      
-      # 🔌 nvargus socket (CSI 카메라 데몬 통신)
-      - /tmp/argus_socket:/tmp/argus_socket
-      
-      # 🤖 기존 RoboVLMs 폴더 (있을 경우)
-      - /workspace/RoboVLMs:/workspace/RoboVLMs
-      
-    # 🚀 작업 디렉토리
-    working_dir: /workspace/vla
+      # 프로젝트 코드
+      - ./vla:/workspace/vla
+      - ./ROS_action:/workspace/vla/ROS_action
+      # X11 디스플레이
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      # 카메라 장치
+      - /dev/video0:/dev/video0:rw
+      # 로봇 시리얼 포트 (필요시)
+      - /dev/ttyUSB0:/dev/ttyUSB0:rw
+      - /dev/ttyUSB1:/dev/ttyUSB1:rw
+      # 키보드 입력
+      - /dev/input:/dev/input:ro
     
-    # 💻 컨테이너 시작 명령어
-    command: >
-      bash -c "
-        echo '🚀 Mobile VLA Docker 컨테이너 시작 (검증된 환경 기반)' &&
-        
-        # ROS2 환경 설정
-        source /opt/ros/humble/setup.bash &&
-        export ROS_DOMAIN_ID=42 &&
-        
-        # ROS_action 워크스페이스 빌드 (필요시)
-        if [ -d 'ROS_action/src' ] && [ ! -d 'ROS_action/install' ]; then
-          echo '📦 ROS_action 워크스페이스 빌드 중...' &&
-          cd ROS_action &&
-          colcon build --packages-select camera_pub &&
-          source install/setup.bash &&
-          cd .. &&
-          echo '✅ ROS_action 빌드 완료'
-        fi &&
-        
-        # 헬스체크 실행
-        /usr/local/bin/healthcheck.sh &&
-        
-        # Mobile VLA 시스템 대기 모드
-        echo '✅ Mobile VLA 시스템 준비 완료 (검증된 VLA 환경)' &&
-        echo '📋 사용 가능한 명령어:' &&
-        echo '   docker exec -it mobile_vla_verified vla-camera' &&
-        echo '   docker exec -it mobile_vla_verified vla-collect' &&
-        echo '   docker exec -it mobile_vla_verified torch_cuda_test' &&
-        echo '   docker exec -it mobile_vla_verified bash' &&
-        
-        # 무한 대기 (다른 터미널에서 접속 가능)
-        tail -f /dev/null
-      "
+    # 권한 설정
+    privileged: true
+    devices:
+      - /dev/video0:/dev/video0
+      - /dev/ttyUSB0:/dev/ttyUSB0
+      - /dev/ttyUSB1:/dev/ttyUSB1
     
-    # 🔍 헬스체크
+    # 포트 노출
+    ports:
+      - "8888:8888"  # Jupyter Notebook
+      - "6006:6006"  # TensorBoard
+      - "11311:11311"  # ROS Master
+    
+    # 헬스체크
     healthcheck:
-      test: [
-        "CMD", 
-        "/usr/local/bin/healthcheck.sh"
-      ]
+      test: ["CMD", "/usr/local/bin/healthcheck.sh"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 60s
     
-    # 🏷️ 라벨
-    labels:
-      - "com.nvidia.jetson.mobile-vla=true"
-      - "com.nvidia.jetson.version=verified-base"
-      - "com.docker.compose.project=mobile-vla"
-
-  # 📊 모니터링 서비스 (선택적)
-  monitoring:
-    image: mobile_vla:verified-base
-    container_name: mobile_vla_monitoring
-    restart: unless-stopped
-    
-    network_mode: host
-    runtime: nvidia
-    
-    environment:
-      - ROS_DOMAIN_ID=42
-      - NVIDIA_VISIBLE_DEVICES=all
-    
-    volumes:
-      - ./:/workspace/vla
-      - mobile_vla_logs:/workspace/vla/logs
-    
-    working_dir: /workspace/vla
-    
+    # 시작 명령어
     command: >
       bash -c "
-        echo '📊 Mobile VLA 모니터링 서비스 시작 (검증된 환경)' &&
-        
-        # 모니터링 루프
-        while true; do
-          echo '=========== Mobile VLA System Status (Verified Base) ===========' &&
-          echo '⏰ Time:' && date &&
-          echo '' &&
-          echo '🔧 GPU Status:' &&
-          nvidia-smi --query-gpu=memory.used,memory.total,utilization.gpu,temperature.gpu --format=csv,noheader,nounits &&
-          echo '' &&
-          echo '💾 Memory Usage:' &&
-          free -h &&
-          echo '' &&
-          echo '💿 Disk Usage:' &&
-          df -h /workspace/vla &&
-          echo '' &&
-          echo '🤖 ROS2 Nodes:' &&
-          timeout 5s ros2 node list 2>/dev/null || echo 'No ROS2 nodes active' &&
-          echo '' &&
-          echo '🎥 Camera Status:' &&
-          timeout 3s ros2 topic hz /camera/image_raw 2>/dev/null || echo 'Camera topic not active' &&
-          echo '' &&
-          echo '=================================================================' &&
-          echo '' &&
-          sleep 30
-        done
+        echo '🚀 Mobile VLA 시스템 시작...' &&
+        echo '📊 시스템 상태 확인...' &&
+        /usr/local/bin/healthcheck.sh &&
+        echo '🤖 ROS2 환경 설정...' &&
+        source /opt/ros/humble/setup.bash &&
+        source /workspace/vla/ROS_action/install/setup.bash &&
+        echo '🎯 노드 실행 준비 완료!' &&
+        echo '📋 사용 가능한 명령어:' &&
+        echo '   ros2 run camera_pub camera_publisher_continuous' &&
+        echo '   ros2 run vla_inference vla_inference_node' &&
+        echo '   ros2 run robot_control robot_control_node' &&
+        echo '   ros2 run mobile_vla_data_collector mobile_vla_data_collector' &&
+        echo '' &&
+        bash
       "
     
-    depends_on:
-      - mobile-vla
+    # 재시작 정책
+    restart: unless-stopped
     
+    # 리소스 제한
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+
+  # =============================================================================
+  # 📊 모니터링 컨테이너 (선택사항)
+  # 시스템 상태 및 로그 모니터링
+  # =============================================================================
+  mobile_vla_monitor:
+    image: nginx:alpine
+    container_name: mobile_vla_monitor
+    ports:
+      - "8080:80"
+    volumes:
+      - ./monitoring:/usr/share/nginx/html:ro
+    depends_on:
+      - mobile_vla_main
+    restart: unless-stopped
     profiles:
-      - monitoring  # 선택적 실행: docker-compose --profile monitoring up
+      - monitoring
 
-# 📁 Named Volumes (퍼시스턴트 스토리지)
+  # =============================================================================
+  # 🗄️ 데이터베이스 컨테이너 (선택사항)
+  # 실험 데이터 저장
+  # =============================================================================
+  mobile_vla_db:
+    image: postgres:13-alpine
+    container_name: mobile_vla_db
+    environment:
+      POSTGRES_DB: mobile_vla
+      POSTGRES_USER: vla_user
+      POSTGRES_PASSWORD: vla_password
+    volumes:
+      - mobile_vla_data:/var/lib/postgresql/data
+      - ./database/init:/docker-entrypoint-initdb.d:ro
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    profiles:
+      - database
+
+# =============================================================================
+# 📦 볼륨 정의
+# =============================================================================
 volumes:
-  mobile_vla_cache:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/docker_volumes/cache
-
   mobile_vla_data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/docker_volumes/dataset
 
-  mobile_vla_logs:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/docker_volumes/logs
-
-# 🌐 네트워크 설정 (host 네트워크 사용으로 실제로는 불필요)
+# =============================================================================
+# 🌐 네트워크 정의
+# =============================================================================
 networks:
   default:
-    external: true
-    name: host
+    name: mobile_vla_network
+    driver: bridge
