--- a/Dockerfile.mobile-vla
+++ b/Dockerfile.mobile-vla
@@ -63,6 +63,14 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/* && \
     apt-get clean
 
+# 1.5. OpenCV 충돌 해결
+RUN apt-get update && \
+    apt-get remove -y libopencv-dev libopencv && \
+    apt-get install -y --no-install-recommends \
+        libopencv-dev \
+    && rm -rf /var/lib/apt/lists/* && \
+    apt-get clean
+
 # 2. ROS 2 Humble 설치 (기존과 동일)
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
@@ -145,7 +153,8 @@ RUN mkdir -p /workspace/vla \
     && mkdir -p /workspace/vla/ROS_action \
     && mkdir -p /workspace/vla/mobile_vla_dataset \
     && mkdir -p /workspace/vla/.cache/huggingface \
-    && mkdir -p /workspace/vla/logs
+    && mkdir -p /workspace/vla/logs \
+    && chmod -R 777 /workspace/vla
 
 # 1️⃣1️⃣ .bashrc 설정 (기존 + Mobile VLA 추가)
 RUN echo "" >> /root/.bashrc && \
