--- a/ROS_action/src/camera_pub/package.xml
+++ b/ROS_action/src/camera_pub/package.xml
@@ -12,7 +12,7 @@
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
-  <depend>OpenCV</depend>
+  <depend>libopencv-dev</depend>
   <depend>camera_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
