--- a/Dockerfile.mobile-vla.backup
+++ b/Dockerfile.mobile-vla.backup
@@ -3,8 +3,8 @@
 # 기존 작동하는 VLA 환경에 RoboVLMs 시스템 추가
 # =============================================================================
 
-# 베이스 이미지: CUDA True로 검증된 PyTorch 2.3.0 이미지
-FROM mobile_vla:pytorch-2.3.0-optimized
+# 베이스 이미지: 검증된 Jetson PyTorch (43.7GB 이미지 기반)
+    FROM nvcr.io/nvidia/l4t-pytorch:r35.2.1-pth2.0-py3
 
 # 메타데이터
 LABEL maintainer="Mobile VLA RoboVLMs Team"
@@ -28,7 +28,7 @@ ENV CUDAARCHS=87
 ENV CUDA_ARCHITECTURES=87
 ENV PATH="/root/.local/bin:/root/.cargo/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ENV PYTHONUNBUFFERED=1
-ENV RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+ENV RMW_IMPLEMENTATION=rmw_cyclonedx_cpp
 ENV HF_HOME=/root/.cache/huggingface
 
 # Jetson 전용 환경 설정 (기존과 동일) - pip 인덱스는 기본 PyPI 사용
@@ -88,18 +88,16 @@ RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o 
         libxcb-shape0-dev libxcb-xkb-dev libqt5x11extras5 \
         libxkbcommon-x11-0 libgl1-mesa-glx \
         python3-pip \
-        # ROS 2 Humble 패키지 (Ubuntu 22.04용)
-        ros-humble-desktop \
+        # ROS 2 Foxy 패키지 (Ubuntu 20.04용)
+        ros-foxy-desktop \
         ros-dev-tools \
         python3-colcon-common-extensions \
         python3-rosdep \
-        ros-humble-cv-bridge \
+        ros-foxy-cv-bridge \
         python3-opencv \
         # Mobile VLA용 추가 ROS2 패키지
-        ros-humble-image-transport \
-        ros-humble-camera-info-manager \
-        # RMW 구현체 추가 (FastRTPS 기본)
-        ros-humble-rmw-fastrtps-cpp \
+        ros-foxy-image-transport \
+        ros-foxy-camera-info-manager \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -115,18 +113,17 @@ RUN pip3 install --no-cache-dir --upgrade pip && \
 # 5. Python 버전 확인 및 기본 패키지 설치
 RUN python3 --version && \
     pip3 install --no-cache-dir \
-        "numpy>=1.17.3,<1.25.0" \
+        numpy \
         requests \
         pyserial \
     && rm -rf /root/.cache/pip
 
-# 6. Transformers 및 관련 라이브러리 설치 (소스에서 최신 버전)
+# 6. Transformers 및 관련 라이브러리 설치 (안전한 버전)
 RUN pip3 install --no-cache-dir \
-        "git+https://github.com/huggingface/transformers.git" \
-        "tokenizers>=0.18.0" \
-        "accelerate>=0.25.0" \
-        "huggingface_hub>=0.20.0" \
-        "h5py==3.8.0" \
+        "transformers<4.47.0" \
+        "tokenizers<0.16.0" \
+        "accelerate<0.21.0" \
+        "huggingface_hub<0.17.0" \
     && rm -rf /root/.cache/pip
 
 # 6. RoboVLMs 모델 사전 다운로드 (MAE 0.222 모델) - 선택적
@@ -151,8 +148,8 @@ RUN echo "" >> /root/.bashrc && \
     echo "# 🚀 Mobile VLA RoboVLMs Docker 환경 - 검증된 VLA 기반" >> /root/.bashrc && \
     echo "# =============================================================================" >> /root/.bashrc && \
     echo "" >> /root/.bashrc && \
-    echo "# ROS 2 Humble environment setup" >> /root/.bashrc && \
-    echo "source /opt/ros/humble/setup.bash" >> /root/.bashrc && \
+    echo "# ROS 2 Foxy environment setup" >> /root/.bashrc && \
+    echo "source /opt/ros/foxy/setup.bash" >> /root/.bashrc && \
     echo "export ROS_DOMAIN_ID=42" >> /root/.bashrc && \
     echo "export ROS_LOCALHOST_ONLY=0" >> /root/.bashrc && \
     echo "export HUGGING_FACE_HUB_TOKEN=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" >> /root/.bashrc && \
@@ -170,9 +167,9 @@ RUN echo "" >> /root/.bashrc && \
     echo "" >> /root/.bashrc && \
     echo "# Mobile VLA RoboVLMs 전용 alias" >> /root/.bashrc && \
     echo "alias vla-build='cd /workspace/vla/ROS_action && colcon build'" >> /root/.bashrc && \
-    echo "alias vla-source='source /opt/ros/humble/setup.bash && source /workspace/vla/ROS_action/install/setup.bash'" >> /root/.bashrc && \
-    echo "alias vla-camera='source /opt/ros/humble/setup.bash && source /workspace/vla/ROS_action/install/setup.bash && ros2 run camera_pub camera_publisher_continuous || echo \"카메라 노드가 없습니다. vla-build를 먼저 실행하세요.\"'" >> /root/.bashrc && \
-    echo "alias vla-collect='cd /workspace/vla && python3 -c \"import numpy; print(f\\\"NumPy version: {numpy.__version__}\\\"); import h5py; print(f\\\"H5Py version: {h5py.__version__}\\\"); print(\\\"✅ NumPy/H5Py 호환성 확인 완료\\\")\"'" >> /root/.bashrc && \
+    echo "alias vla-source='source /opt/ros/foxy/setup.bash && source /workspace/vla/ROS_action/install/setup.bash'" >> /root/.bashrc && \
+    echo "alias vla-camera='ros2 run camera_pub camera_publisher_continuous'" >> /root/.bashrc && \
+    echo "alias vla-collect='cd /workspace/vla && python mobile_vla_data_collector.py'" >> /root/.bashrc && \
     echo "alias cuda-test='python -c \"import torch; print(f\\\"PyTorch: {torch.__version__}\\\"); print(f\\\"CUDA Available: {torch.cuda.is_available()}\\\"); print(f\\\"CUDA Device: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else \\\"N/A\\\"}\\\")\"'" >> /root/.bashrc && \
     echo "" >> /root/.bashrc && \
     echo "# Container Run 메뉴 alias" >> /root/.bashrc && \
@@ -181,11 +178,9 @@ RUN echo "" >> /root/.bashrc && \
     echo "alias run-mobile-vla='cd /workspace/vla && python launch_mobile_vla_system.py'" >> /root/.bashrc && \
     echo "" >> /root/.bashrc && \
     echo "# RoboVLMs 시스템 실행 alias" >> /root/.bashrc && \
-    echo "alias robovlms-system='cd /workspace/vla/ROS_action && source /opt/ros/humble/setup.bash && colcon build --packages-select mobile_vla_package && source install/setup.bash && ros2 launch mobile_vla_package robovlms_system.launch.py'" >> /root/.bashrc && \
-    echo "alias robovlms-inference='cd /workspace/vla/ROS_action && source /opt/ros/humble/setup.bash && python3 src/mobile_vla_package/mobile_vla_package/robovlms_inference.py'" >> /root/.bashrc && \
+    echo "alias robovlms-system='cd /workspace/vla/ROS_action && source /opt/ros/foxy/setup.bash && colcon build --packages-select mobile_vla_package && source install/setup.bash && ros2 launch mobile_vla_package robovlms_system.launch.py'" >> /root/.bashrc && \
+    echo "alias robovlms-inference='cd /workspace/vla/ROS_action && source /opt/ros/foxy/setup.bash && python3 src/mobile_vla_package/mobile_vla_package/robovlms_inference.py'" >> /root/.bashrc && \
     echo "alias robovlms-test='cd /workspace/vla && python3 -c \"import torch; from transformers import AutoModel, AutoProcessor; print(\\\"Testing RoboVLMs model...\\\"); model = AutoModel.from_pretrained(\\\"minium/mobile-vla-omniwheel\\\"); print(\\\"✅ RoboVLMs model loaded successfully (MAE 0.222)\\\")\"'" >> /root/.bashrc && \
-    echo "alias show-commands='echo \"📋 사용 가능한 명령어:\"; echo \"   vla-build     : ROS2 워크스페이스 빌드\"; echo \"   vla-source    : ROS2 환경 소싱\"; echo \"   vla-camera    : CSI 카메라 노드 실행\"; echo \"   vla-collect   : Mobile VLA 데이터 수집 시작\"; echo \"   cuda-test     : CUDA/PyTorch 상태 확인\"; echo \"   torch_cuda_test : 기존 VLA CUDA 테스트\"; echo \"   container-run : 컨테이너 내부 실행 메뉴\"; echo \"   mobile-vla-test : Mobile VLA 카메라 테스트\"; echo \"   run-mobile-vla : Mobile VLA 시스템 실행\"; echo \"   robovlms-system : RoboVLMs 시스템 실행 (권장)\"; echo \"   robovlms-inference : RoboVLMs 추론 노드만 실행\"; echo \"   robovlms-test : RoboVLMs 모델 테스트\"; echo \"   show-commands : 이 도움말 표시\"; echo \"   rmw-test      : RMW 구현체 테스트\"'" >> /root/.bashrc && \
-    echo "alias rmw-test='echo \"🔍 RMW 구현체 테스트 중...\"; echo \"현재 RMW: \$RMW_IMPLEMENTATION\"; echo \"FastRTPS 테스트:\"; RMW_IMPLEMENTATION=rmw_fastrtps_cpp ros2 node list 2>/dev/null && echo \"✅ FastRTPS 정상\" || echo \"❌ FastRTPS 오류\"; echo \"기본 RMW 복원:\"; export RMW_IMPLEMENTATION=rmw_fastrtps_cpp'" >> /root/.bashrc && \
     echo "" >> /root/.bashrc && \
     echo "# 환영 메시지" >> /root/.bashrc && \
     echo "echo \"🚀 Mobile VLA RoboVLMs Docker 환경 (검증된 VLA 기반)\"" >> /root/.bashrc && \
@@ -202,8 +197,6 @@ RUN echo "" >> /root/.bashrc && \
     echo "echo \"   robovlms-system : RoboVLMs 시스템 실행 (권장)\"" >> /root/.bashrc && \
     echo "echo \"   robovlms-inference : RoboVLMs 추론 노드만 실행\"" >> /root/.bashrc && \
     echo "echo \"   robovlms-test : RoboVLMs 모델 테스트\"" >> /root/.bashrc && \
-    echo "echo \"   show-commands : 사용 가능한 명령어 표시\"" >> /root/.bashrc && \
-    echo "echo \"   rmw-test      : RMW 구현체 테스트\"" >> /root/.bashrc && \
     echo "echo \"\"" >> /root/.bashrc
 
 # 1️⃣2️⃣ 헬스체크 스크립트 생성
@@ -213,7 +206,7 @@ RUN echo '#!/bin/bash' > /usr/local/bin/healthcheck.sh && \
     echo 'python3 -c "import cv2; print(f\"✅ OpenCV {cv2.__version__}\")"' >> /usr/local/bin/healthcheck.sh && \
     echo 'python3 -c "import transformers; print(f\"✅ Transformers {transformers.__version__}\")"' >> /usr/local/bin/healthcheck.sh && \
     echo 'python3 -c "import h5py; print(f\"✅ HDF5 {h5py.__version__}\")"' >> /usr/local/bin/healthcheck.sh && \
-    echo 'source /opt/ros/humble/setup.bash && echo "✅ ROS2 Humble 준비 완료"' >> /usr/local/bin/healthcheck.sh && \
+    echo 'source /opt/ros/foxy/setup.bash && echo "✅ ROS2 Foxy 준비 완료"' >> /usr/local/bin/healthcheck.sh && \
     echo 'echo "🎉 모든 시스템 정상 - RoboVLMs 환경 기반!"' >> /usr/local/bin/healthcheck.sh && \
     chmod +x /usr/local/bin/healthcheck.sh
 
