--- a/ROS_action/docker-compose.mobile-vla.yml
+++ b/ROS_action/docker-compose.mobile-vla.yml
@@ -11,6 +11,7 @@ services:
       - DISPLAY=${DISPLAY}
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      - HUGGING_FACE_HUB_TOKEN=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
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ./src:/workspace/vla/ROS_action/src
@@ -28,6 +29,6 @@ services:
         cd /workspace/vla/ROS_action &&
         colcon build --packages-select mobile_vla_package &&
         source install/setup.bash &&
-        ros2 launch mobile_vla_package launch_mobile_vla.launch.py inference_node:=true
+        ros2 launch mobile_vla_package robovlms_system.launch.py
       "
     restart: unless-stopped
