--- a/install/mobile_vla_package/share/mobile_vla_package/package.xml
+++ b/install/mobile_vla_package/share/mobile_vla_package/package.xml
@@ -11,9 +11,9 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>h5py</exec_depend>
-  <exec_depend>numpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-opencv</exec_depend>
-  <exec_depend>python3-pillow</exec_depend>
+  <exec_depend>python3-pil</exec_depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
