--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 ROS_action/mobile_vla_dataset/*.h5 filter=lfs diff=lfs merge=lfs -text
+*.onnx filter=lfs diff=lfs merge=lfs -text
