--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ setup_ros2_host.sh
 ./vla/RoboVLMs/.vlms
 RoboVLMs/.vlms/kosmos-2-patch14-224
 mobile-vla-omniwheel/
+*.whl
+*.pth
+config/weights/
